[tool.poetry]
name = "poetry-dir"
version = "0.1.0"
description = "homework for 18 lesson"
authors = ["Roman1Roman <127185503+Roman1Roman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc2"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
